--- a/index/04-chap4.Rmd
+++ b/index/04-chap4.Rmd
@@ -25,15 +25,12 @@ In this study, we used data from the INTERVAL prospective cohort (N=33388) to ex
 
 ### Study population
 
-The present study was conducted on up to 33388 European ancestry INTERVAL participants living in the United Kingdom. These were the participants who had genetic data, had basic phenotype data and full blood count measures (Figure \@ref(fig:INTERVAL-STROBE)). Participants were mostly of European descent.
+The present study was conducted on up to 33388 European ancestry INTERVAL participants living in the United Kingdom. These were the participants who had genetic data, had basic phenotype data and full blood count measures (Figure \@ref(fig:INTERVAL-STROBE)). Participants were mostly of European descent. More details of this study can be found in Chapter \@ref(common-methods).
 
 ```{r INTERVAL-STROBE, echo = FALSE, out.width="80%", fig.cap="A STROBE diagram outlining participants included in the INTERVAL study (N=33388)."}
 include_graphics(path = "figure/BMI_platelets/STROBE_diagram.pdf", dpi = NA)
 
 ```
-
-### Measurement of BMI and covariables
-Participants self-reported their weight and height using online questionnaires. BMI was derived from their weight in kilograms by the square of their height in metres (kg/m^2^). BMI was rank normal transformed (rntransform() function from “moosefun” package https://github.com/hughesevoanth/moosefun/). Available covariables used in the analysis were age, sex, smoking status (in three categories of never, previous and current) and alcohol consumption (in four categories of rarely, less than once a week, 1-2 times a week and 3-5 times a week or most days). These covariables were chosen due to their plausible associations with both BMI and cardiovascular health [@Bhaskaran2018a], therefore it is important to adjust for these variables in the observational estimates.
 
 ### Measurement of platelet traits
 Blood was taken by venipuncture into 3mL EDTA tubes. Platelet parameters were measured using the Sysmex XN-1000 instrument [@Astle2016]. This analyzer provides information on cell counts by using a combination of fluorescence (PLT-F) and impedance (I) flow cytometry. The PLT-F channel used a Fluorocell fluorescent dye (oxazine), whereas the impedance method uses electrical resistance to detect platelets. Platelet indices included in the current study, along with the raw units, are provided in Table \@ref(tab:Platelet-traits). These measurements were pre-adjusted for technical covariates such as time between venipuncture and blood count, as well as instrument drift, seasonal and weekly variation [@Astle2016]. Adjustment was performed with cyclic, thin-plate and P-splines in a generalized additive model (GAM) [@Akbari2020]. Resulting platelet trait values along with their units of measurement are reported in Table \@ref(tab:Platelet-traits). These data were rank normal transformed to normalize the distribution of each trait. Therefore, each platelet index is measured in normalized standard deviation (SD) units.
